[package]
name = "jpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }    # for argument parsing
reqwest = { version = "0.11.10", features = ["json"] }  # for connecting with server
futures = "0.3"                                         # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] }     # for our async runtime
